# ML1FinalProject

./: .replit  factors.txt  main.py  pyproject.toml  utils.py
pages/: 1_Predict.py  2_Dataset.py
